tests/still-todo/should-fail/missing-signature.fk
-- #desc operator definitions should be accompanied by a type signature
-- #return missing type signature for operator "foo"

foo! = 42

main : {Unit}
main! = unit
